# anycuda

./: .gitignore  CMakeLists.txt  Dockerfile  anycuda.spec  build-img.sh  build-in-docker.sh  build-inside-docker.sh  build.sh  run.sh
example/: main.cpp
include/: cJSON.h  cuda-helper.h  cuda-subset.h  hijack.h  nvml-helper.h  nvml-subset.h
src/: cJSON.c  cuda_originals.c  hijack_call.c  loader.c  nvml_entry.c  register.c
tools/: mem_occupy_tool.c  monitor_dockernized.c
